tests/sksl/errors/ReservedNameDvec4.glsl
### Compilation failed:

error: 1: 'dvec4' is a reserved word
int dvec4;
    ^^^^^
1 error
